# hackathon-starter

./: .env.example  .envrc  .gitignore  Dockerfile  app.js  config.yaml  deploy.sh  docker-compose.yml  infrastructure-diagram.md  package-lock.json  pyproject.toml  setup.sh
.github/workflows/: docker-build.yml  kustomize-apply.yml  node.js.yml
controllers/: blog.js
genai/: README.md  TASKS.md  app.py  create_context.py  prompts.py
k8s/: README.md
k8s/base/: deployment.yaml  gateway.yaml  hpa.yaml  httproute.yaml  kustomization.yaml  service.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
k8s/overlays/stg/: kustomization.yaml
models/: BlogPost.js
terraform/: README.md
terraform/live/eks-infra/: .terraform.lock.hcl  eks.tf  main.tf  outputs.tf  variables.tf  vpc.tf
terraform/live/tf-state-backend/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
views/blog/: index.pug  post.pug
